--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 8080;
-    server_name localhost;
+    server_name localhost sorpresa.restaurantepizzeriaeuro.com;
 
     root /usr/share/nginx/html;
     index index.html;
